src/assets/style/themes.scss
@mixin light {
  --secondary: rgb(var(--gray-11));
  --primary: rgb(var(--gray-0));
  --accent: rgb(var(--blue-gray-5));
  --muted: rgb(var(--gray-9));
  --shadow: rgba(var(--gray-0), 0.5);
  --tint: rgb(var(--teal-10));
  --selection: rgba(var(--teal-9), 0.5);

  --hidden: rgba(var(--gray-10), 0);
  --hidden-couple: rgba(var(--gray-10), 0.3);
  --inactive: var(--muted);
  --default-blend-mode: multiply;

  // flowchart
  --flow-background: rgb(var(--indigo-11));
  --flow-color: rgb(var(--blue-2));
  --flow-color-inactive: rgba(var(--blue-2),0.3);
  --flow-background-highlight: rgb(var(--orange-5));
  --flow-color-highlight: rgb(var(--orange-11));

  --flow-graph-background: rgb(var(--blue-2));
  --flow-graph-color: rgb(var(--gray-11));

  --flow-edge: rgb(var(--blue-2));
  --flow-edge-inactive: rgba(var(--blue-2),0.3);
  --flow-edge-highlight: rgb(var(--orange-5));

  // ui
  // --ui-accent: rgb(var(--violet-5));
  --ui-text: rgb(var(--gray-0));
  --ui-text-inverted: rgb(var(--gray-11));
  --ui-text-muted: rgb(var(--blue-gray-5));
  --ui-text-disabled: rgb(var(--blue-gray-8));
  --ui-background: rgb(var(--gray-11));

  --ui-error: rgb(var(--red-6));

  --ui-accent: rgb(var(--violet-6));
  --ui-accent-dark: rgb(var(--violet-3));
  --ui-accent-deep: rgb(var(--violet-2));
  --ui-accent-light: rgb(var(--violet-9));
  --ui-backdrop: rgb(var(--blue-11));
  --ui-backdrop-translucent: rgba(233,235,255,0.5);

  --node-background: rgb(var(--gray-0));
  --node-background-light: rgb(var(--gray-9));
  --node-text: rgb(var(--gray-11));
  --node-border-radius: var(--ui-border-radius);
  --node-padding: var(--spacing-l);

  --edge-color: rgb(var(--gray-0));
  --edge-text-shadow: var(--ui-background);
  --edge-color-accent: var(--ui-accent);

  // NEW
  --background-base: white;
  --background-base-opacity: 95%;

  --text-base: black;
  --text-base-opacity: 85%;
}

@mixin dark {
  --secondary: rgb(var(--gray-0));
    --primary: rgb(var(--gray-11));
    --accent: rgb(var(--blue-gray-5));
    --muted: rgb(var(--gray-3));
    --shadow: rgba(var(--gray-0), 0.5);
    --tint: rgb(var(--teal-1));
    --selection: rgba(var(--teal-3), 0.5);

    --hidden: rgba(var(--gray-1), 0);
    --hidden-couple: rgba(var(--gray-1), 0.3);
    --inactive: var(--muted);
    --default-blend-mode: multiply;


    --flow-background: rgb(var(--blue-2));
    --flow-color: rgb(var(--indigo-11));
    --flow-color-inactive: rgba(var(--blue-2),0.3);
    --flow-background-highlight: rgb(var(--orange-5));
    --flow-color-highlight: rgb(var(--orange-11));
  
    --flow-graph-background: rgb(var(--blue-2));
    --flow-graph-color: rgb(var(--gray-11));
  
    --flow-edge: rgb(var(--indigo-10));
    --flow-edge-inactive: rgba(var(--blue-2),0.3);
    --flow-edge-highlight: rgb(var(--orange-5));

    // NEW
    --background-base: black;
    --background-base-opacity: 90%;

    --text-base: white;
    --text-base-opacity: 90%;
}

:root {
  @include light;

  &.dark {
    @include dark;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    @include dark;

    &.light {
      @include light;
    }
  }
}

